--- a/res/values-kab/strings.xml
+++ b/res/values-kab/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Aard 2</string>
+    <string name="app_name">Aardict</string>
     <string name="subtitle_lookup">Af-d</string>
     <string name="subtitle_bookmark">Asɣal</string>
     <string name="subtitle_history">Tamsirt</string>
