--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Aardict</string>
     <string name="action_add_dictionaries">Додати</string>
     <string name="action_bookmark_article">Закладинки</string>
     <string name="action_filter">Фільтр</string>
@@ -9,7 +8,7 @@
     <string name="action_goto_parent_dir">Вверх</string>
     <string name="action_lookup">Пошук</string>
     <string name="action_reload_directory">Перезавантажити</string>
-    <string name="action_select_style">Стиль...</string>
+    <string name="action_select_style">Стиль…</string>
     <string name="action_sort_by_time">За часом</string>
     <string name="action_sort_by_title">За назвою</string>
     <string name="action_zoom_in">Збільшити</string>
