--- a/res/values-kab/strings.xml
+++ b/res/values-kab/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Aardict</string>
     <string name="subtitle_lookup">Af-d</string>
     <string name="subtitle_bookmark">Asɣal</string>
     <string name="subtitle_history">Tamsirt</string>
@@ -50,7 +49,7 @@
     <string name="article_collection_nothing_to_lookup">Ulac i unadi</string>
     <string name="article_view_msg_not_found">Ulac ayen yettwafen</string>
     <string name="dictionaries_please_wait">Rǧu ma ulac aɣilif</string>
-    <string name="dictionaries_scanning_device">Andi deg imawalen iteddu...</string>
+    <string name="dictionaries_scanning_device">Andi deg imawalen iteddu…</string>
     <string name="dictionaries_confirm_forget">Ttu %1$s?</string>
     <string name="lookup_nothing_found">Ulac ayen yettwafen</string>
     <string name="main_empty_bookmarks">Ulac asɣal</string>
